--- a/src/assets/SidebarUser.css
+++ b/src/assets/SidebarUser.css
@@ -1,4 +1,3 @@
-
 @import "https://cssicon.space/css/icons.css";
 
 
@@ -86,7 +85,7 @@
 
   .icon.close {
     background-color: transparent;
-
+    left: 210px;
     top: 45px;
     position: fixed;
 
@@ -185,7 +184,7 @@
   }
   .sbt{
     background-color: #800000;
-    height: 94px;
+    height: 10%;
     position: fixed;
     width: 35vh;
     top: 0;
@@ -337,6 +336,7 @@
   cursor: pointer; 
   transition: background-color 0.3s ease, color 0.3s ease;
   text-align: center;
+  
 }
 #sidebar-hover:hover {
     background-color: #800000; 
@@ -410,7 +410,7 @@
     height: 50px; 
     border-radius: 50%; 
     margin-right: 10px;
-    margin-top: 10px; 
+    margin-top: 2px; 
   }
   
   .profile-name, .profile-email {
