--- a/src/admin/Adminapp.css
+++ b/src/admin/Adminapp.css
@@ -7,3 +7,10 @@
     width: 100%;
     box-shadow: 0px 2px 4px rgba(100,100,100,0.5);
   }
+  @media  (max-width: 768px)  {
+    .header{
+      width: 100%;
+    }
+
+    
+  }
