--- a/src/assets/Dashboard.css
+++ b/src/assets/Dashboard.css
@@ -3,13 +3,18 @@
 .container-dashboard {
     background-color: #f4f4f4;
     min-height: 500px;
-    margin: 120px 50px 50px 50px;
     z-index: 100;
+    position: relative;
+    top: 300px;
+    left: 300px;
   }
   
-  .title {
+  .titledashboard {
     text-align: center;
     margin-bottom: 20px;
+    margin-top: 50px;
+    display: block;
+    position: relative;
   }
   
   .dashboard-container {
@@ -27,10 +32,21 @@
     background-color: #fff;
     border: 1px solid #ddd;
     border-radius: 8px;
-    padding: 20px;
+    padding: 10px;
     margin: 10px;
     flex: 1 1 200px;
     text-align: center;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
-  
+  #totalevents{
+    position: relative;
+  }
+  @media (max-width: 768px){
+    .container-dashboard{
+      top: 300px;
+      left: -5px;
+    }
+    .titledashboard{
+      font-size: 20px;
+    }
+  }
