--- a/src/Login.css
+++ b/src/Login.css
@@ -130,8 +130,9 @@ form.sign-up-form {
     background-clip: text; /* Apply gradient to the text */
     -webkit-text-fill-color: transparent; /* Ensure the gradient shows */
     animation: gradientAnimation 3s ease infinite; /* Animate gradient */
-    margin-bottom: 20%;
+    margin-bottom: 10%;
     margin-top: 10%;
+    margin-left: 30%;
 }
 
 
@@ -365,6 +366,7 @@ form.sign-up-form {
 @media (max-width: 480px) {
     .title {
         font-size: 18px;
+
     }
 
     .input-field {
