--- a/src/assets/SidebarAdmin.css
+++ b/src/assets/SidebarAdmin.css
@@ -86,12 +86,15 @@
 
   .icon.close {
     background-color: transparent;
-
+    transition: transform 0.2s ease-in-out;
     top: 45px;
     position: fixed;
-
   }
-  
+  .icon.close:hover{
+    transform: scale(1.2);
+  }
+
+
 
   .icon, .icon:before, .icon:after {
     transition: transform 0.4s ease, top 0.4s ease;
@@ -437,6 +440,10 @@
     .icon.menu{
       left: 20%;
       top: 19%;
+    }
+    .icon.close:before{
+      top: 15%;
+
     }
     
 }
