--- a/src/Login.css
+++ b/src/Login.css
@@ -336,6 +336,8 @@ form.sign-up-form {
         width: 100%;
         height: auto;
         left: 15%;
+        position: relative;
+        top: -100px;
     }
 
     .title {
