--- a/src/assets/SidebarAdmin.css
+++ b/src/assets/SidebarAdmin.css
@@ -170,7 +170,7 @@
   
   .sidebar.active {
     position: fixed;
-    width: 35vh;
+    width: 35px;
     top: 0;
     left: 0;
     height: 100vh;
@@ -196,7 +196,7 @@
     background-color: #800000;
     height: 94px;
     position: fixed;
-    width: 35vh;
+    width: 378px;
     top: 0;
     left: 0;
     z-index: 999;
@@ -439,21 +439,45 @@
   @media screen and (max-width: 768px) {
     .sidebar-container{
       height: 50%;
-      width: 7%;
+      width: 5%;
+      position: relative;
+    }
+    .sidebar.active{
+      width: 375px;
     }
     .icon.menu{
       left: 20%;
       top: 19%;
     }
     .icon.close{
-      left: 200px !important;
-      top: 30px !important;
+      left: 270px !important;
+      top: 50px !important;
     }
     .icon.close:before{
       top: 15%;
     }
     .iconbgadmin{
       left: 0px;
+    }
+    .iconbgadmin img{
+      height: auto;
+      width: 200px;
+    }
+    .divideradmin{
+      top: 190px;
+    }
+    .homeadmin{
+      top: 210px;
+    }
+    .calendaradmin{
+      top: 270px;
+    }
+    .divider2admin{
+      top: 340px;
+    }
+    .iconbgadmin{
+      top: 60px;
+      left: 50px;
     }
     
 }
