--- a/src/assets/Dashboard.css
+++ b/src/assets/Dashboard.css
@@ -7,6 +7,7 @@
     position: relative;
     top: 300px;
     left: 300px;
+    border-radius: 15px;
   }
   
   .titledashboard {
@@ -41,12 +42,24 @@
   #totalevents{
     position: relative;
   }
+  .maintitle{
+    font-size: 30px;
+  }
   @media (max-width: 768px){
     .container-dashboard{
       top: 300px;
       left: -5px;
     }
     .titledashboard{
-      font-size: 20px;
+      font-size: 25px;
+      height: 60px;
+      display: flex;
+      justify-content: center;
+      align-items: center ;
+    }
+    .dashboard-container{
+      flex-wrap: wrap;
+      margin: 0px;
+      height: 350px;
     }
   }
