--- a/src/assets/calendaradmin.css
+++ b/src/assets/calendaradmin.css
@@ -308,6 +308,9 @@
     resize: horizontal;
     overflow: auto;
   }
+  .maintitle{
+    display: none;
+  }
 
 /* Mobile styles */
 @media (max-width: 768px) {
@@ -421,6 +424,7 @@
     position: absolute;
     top: -80px;
     left: 170px;
+    white-space: nowrap;
   }
   .calendar-controls{
     position: absolute;
